--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,15 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+
+ @import "bootstrap";
+
+.field_with_errors input[type="text"], .field_with_errors input[type="password"] {
+  border: 1px solid red;
+}
+.red { color: red }
+.green { color: green }
+h1, h2 { text-transform: capitalize; text-align: center; padding: 15px}
+form.button_to, .btn-edit { display: inline-block;}
+tr th { text-align: center; }
