--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 
  @import "bootstrap";
 
+html, body { height: 100% }
 .field_with_errors input[type="text"], .field_with_errors input[type="password"] {
   border: 1px solid red;
 }
