--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,6 +1,8 @@
 <div class="row h-100 justify-content-center align-items-center">
   <div class="col align-self-center text-center">
-    <h1>Welcom to Cryptofolio</h1>
-    <p>Please <%= link_to "sign in", signin_path %> to start using our amazing app!</p>
+    <h1>Welcome to Cryptofolio!</h1>
+    <% if !current_user %>
+      <p>Please <%= link_to "sign in", signin_path %> to start using our amazing app!</p>
+    <% end %>
   </div>
 </div>
