--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -21,32 +21,6 @@
 
 <div class="row">
   <div class="col">
-
-    <%= form_for [@current_user, @transaction] do |f| %>
-
-      <div class="form-group">
-        <%= f.label :trade_quantity %>
-        <%= f.text_field :trade_quantity, class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :trade_price %>
-        <%= f.text_field :trade_price, class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :trade_date %>
-        <%= f.date_field :trade_date, class: "form-control", value: Time.now.strftime("%Y-%m-%d") %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :coin_id %>
-        <%= f.select :coin_id, Coin.all.collect { |c| [ c.name.titleize, c.id ] }.sort, {include_blank: true}, {class: "form-control"} %>
-      </div>
-
-      <%= f.submit class: "btn btn-primary" %>
-
-    <% end %>
-
+    <%= render 'form' %>
   </div>
 </div>
