--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,8 +19,8 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col">
+<div class="row justify-content-md-center">
+  <div class="col-md-auto col-md-5 text-center">
     <%= form_for @user do |f| %>
       <div class="form-group">
         <%= f.label :name %>
@@ -47,9 +47,9 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col">
+<div class="row mt-4">
+  <div class="col text-center">
     <p>OR</p>
-    <p><%= link_to "Sign in with Facebook", "/auth/facebook" %></p>
+    <p><%= link_to "Sign in with Facebook", "/auth/facebook", class: "btn  btn-info" %></p>
   </div>
 </div>
