--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -4,20 +4,7 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col">
-    <% if @transaction.errors.any? %>
-      <div id="error_explanation">
-        <h2>There were some errors:</h2>
-        <ul>
-          <% @transaction.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-  </div>
-</div>
+<%= render partial: 'layouts/form_errors', locals: {obj: @transaction} %>
 
 <div class="row">
   <div class="col">
