--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,5 @@ html, body { height: 100% }
 h1, h2 { text-transform: capitalize; text-align: center; padding: 15px}
 form.button_to, .btn-edit { display: inline-block;}
 tr th { text-align: center; }
+#error_explanation ul { padding: 0; }
+#error_explanation ul li { list-style-type: none; color: red; font-style: italic}
