--- a/app/views/layouts/_form_errors.html.erb
+++ b/app/views/layouts/_form_errors.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <% if obj.errors.any? %>
       <div id="error_explanation">
-        <h2>There were some errors:</h2>
+        <h4>There were some errors</h4>
         <ul>
           <% obj.errors.full_messages.each do |message| %>
             <li><%= message %></li>
