--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -6,8 +6,8 @@
 
 <%= render partial: 'layouts/form_errors', locals: {obj: @transaction} %>
 
-<div class="row">
-  <div class="col">
+<div class="row justify-content-md-center">
+  <div class="col-md-auto col-md-5 text-center">
     <%= render 'form' %>
   </div>
 </div>
