Nested attributes for portfolio

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -4,7 +4,7 @@
     <% if !current_user %>
       <p>Please <%= link_to "sign in", signin_path %> to start using our amazing app!</p>
     <% else !current_user %>
-      <p>Go to your <%= link_to "Portfolio", user_path(current_user) %></p>
+      <p>Go to your <%= link_to "Portfolio", portfolios_path %></p>
     <% end %>
   </div>
 </div>
