--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -16,12 +16,16 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col">Name</th>
+          <th scope="col">Value</th>
+          <th scope="col">Action</th>
         </tr>
       </thead>
       <tbody>
         <% @portfolios.each do |portfolio| %>
         <tr>
           <td class="text-center"><%= link_to portfolio.name, portfolio_path(portfolio) %></td>
+          <td class="text-right"><%= number_to_currency(portfolio.total_holding) %></td>
+          <td class="text-center"><%= link_to "edit", edit_portfolio_path(portfolio), class: "btn btn-primary" %> <%= button_to "delete", portfolio_path(portfolio), {method: "delete", class: "btn btn-danger"} %></td>
         </tr>
         <% end %>
       </tbody>
