--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -2,7 +2,7 @@
 
   <div class="form-group">
     <%= f.label :coin_id %>
-    <%= f.select :coin_id, Coin.all.collect { |c| [ c.name.titleize, c.id ] }, {include_blank: true}, {class: "form-control"} %>
+    <%= f.select :coin_id, Coin.all.collect { |c| [ c.name.titleize, c.id ] }, {include_blank: true, selected: f.object.coin_id ? f.object.coin_id : params["coin_id"]}, {class: "form-control"}  %>
   </div>
 
   <div class="form-group">
